--- a/client/src/pages/register/register.css
+++ b/client/src/pages/register/register.css
@@ -24,7 +24,7 @@
 .loginLogo {
   font-size: 50px;
   font-weight: 800;
-  color: #1775ee;
+  color: #2e3b55;
   margin-bottom: 10px;
 }
 
@@ -58,7 +58,7 @@
     height: 50px;
     border-radius: 10px;
     border: none;
-    background-color: #1775ee;
+    background-color: #2e3b55;
     color: white;
     font-size: 20px;
     font-weight: 500;
@@ -67,7 +67,7 @@
 
 .loginForgot{
     text-align: center;
-    color: #1775ee;
+    color: #2e3b55;
 }
 
 .loginRegisterButton{
@@ -76,7 +76,7 @@
     height: 50px;
     border-radius: 10px;
     border: none;
-    background-color: #42b72a;
+    background-color: #99cc00;
     color: white;
     font-size: 20px;
     font-weight: 500;
